WS-I S3 review: enumerate the vector families from the manifest, and say only what the tests prove
Nine findings from the review of #187, each fixed here.

CodecVectorsTest named its files by hand, so a new envelope/ or errors/ file in
MANIFEST.files would have been walked and never opened. SuiteFiles now exposes
the walk's file list, and both families are enumerated from it, with a pinned
set of names and a pinned count per file.

The isCiphertext property computed its oracle from the same registry and
BufferLimits calls recognition uses, so a wrong suite overhead moved both sides
together. The oracle now carries the spec's own minimums, 111 and 123.

newEnvelope raised an OutOfMemoryError by hand and the docs called it the
platform's. It is still an Error, on purpose, but its message and docs/27 §6.1
now say the codec raises it for a total no int holds. AllowList sorted into a
TreeSet and then discarded the order; suites() now keeps it. FieldsealError and
KeyUnavailableError gain a (String, Throwable) constructor so S4 can carry a
provider's exception as the cause. lengthEdges and the wiring test built the
same synthetic header two ways; SyntheticOperand.header(Suite) is the one
builder now.

docs/07, docs/27 §6.2 and §8 and the wiring test said the guard fires before
any content is read; recognition reads bytes 0-2 first, and they now say so.
The README said the first feature was built when only its registry row exists.
The workflow's step comment still listed the S2 tests, and one job comment
broke the wrap.